--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "key_mirror",
+  "name": "@nathanfaucett/key_mirror",
   "version": "0.0.1",
-  "description": "key_mirror for the browser and node.js",
+  "description": "creates object where keys are both the key and the value",
   "repository": {
     "type": "git",
     "url": "https://github.com/nathanfaucett/key_mirror.git"
   },
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "npm run test-node",
+    "test-node": "node ./test | ./node_modules/.bin/tap-spec",
+    "test-node-raw": "node ./test",
+    "test-browser-local": "zuul --local 9999 --ui tape -- ./test"
   },
   "keywords": [
     "key_mirror",
@@ -18,13 +21,15 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-jsbeautifier": "^0.2.7",
-    "mocha": "^2.1.0"
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-jsbeautifier": "^0.2.13",
+    "tap-spec": "^4.1.0",
+    "tape": "^4.2.2",
+    "zuul": "^3.7.2"
   },
   "dependencies": {
-    "keys": "nathanfaucett/keys",
-    "is_array_like": "nathanfaucett/is_array_like"
+    "@nathanfaucett/keys": "^0.0.1",
+    "@nathanfaucett/is_array_like": "^0.0.2"
   }
 }
